--- a/ground/gcs/src/plugins/config/attitude.ui
+++ b/ground/gcs/src/plugins/config/attitude.ui
@@ -236,7 +236,7 @@
           <string>Automatic level detection</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_3">
-          <item row="1" column="0" colspan="3">
+          <item row="1" column="0" colspan="4">
            <widget class="QProgressBar" name="accelBiasProgress">
             <property name="value">
              <number>0</number>
@@ -246,7 +246,7 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="2">
+          <item row="2" column="3">
            <spacer name="horizontalSpacer_6">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -259,7 +259,7 @@
             </property>
            </spacer>
           </item>
-          <item row="2" column="1">
+          <item row="2" column="2">
            <widget class="QCheckBox" name="zeroGyroBiasOnArming">
             <property name="toolTip">
              <string>If enabled, a fast recalibration of gyro zero point will be done
@@ -279,7 +279,7 @@ arming it in that case!</string>
            </widget>
           </item>
           <item row="2" column="0">
-           <widget class="QPushButton" name="accelBiasStart">
+           <widget class="QPushButton" name="levelingStart">
             <property name="enabled">
              <bool>false</bool>
             </property>
@@ -295,6 +295,19 @@ arming it in that case!</string>
            <widget class="QLabel" name="label">
             <property name="text">
              <string>Place vehicle level and click start.</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QPushButton" name="levelingAndBiasStart">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="toolTip">
+             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Takes the current attitude as level and additionally computes the&lt;/p&gt;&lt;p&gt;z-accel offset to match gravity. This produces a more accurate&lt;/p&gt;&lt;p&gt;altitude hold for VTOL aircrafts.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            </property>
+            <property name="text">
+             <string>Start and Zero Vertical</string>
             </property>
            </widget>
           </item>
