--- a/ground/gcs/src/plugins/config/attitude.ui
+++ b/ground/gcs/src/plugins/config/attitude.ui
@@ -23,7 +23,7 @@
       <attribute name="title">
        <string>Sensor Settings</string>
       </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout_7" stretch="0,0,0,0">
+      <layout class="QVBoxLayout" name="verticalLayout_7" stretch="0,0,0,0,0">
        <item>
         <widget class="QGroupBox" name="groupBox">
          <property name="title">
@@ -259,25 +259,6 @@
             </property>
            </spacer>
           </item>
-          <item row="2" column="2">
-           <widget class="QCheckBox" name="zeroGyroBiasOnArming">
-            <property name="toolTip">
-             <string>If enabled, a fast recalibration of gyro zero point will be done
-whenever the frame is armed. Do not move the airframe while
-arming it in that case!</string>
-            </property>
-            <property name="text">
-             <string>Zero gyros while arming vehicle</string>
-            </property>
-            <property name="objrelation" stdset="0">
-             <stringlist>
-              <string>objname:AttitudeSettings</string>
-              <string>fieldname:ZeroDuringArming</string>
-              <string>buttongroup:1</string>
-             </stringlist>
-            </property>
-           </widget>
-          </item>
           <item row="2" column="0">
            <widget class="QPushButton" name="levelingStart">
             <property name="enabled">
@@ -364,6 +345,25 @@ arming it in that case!</string>
            </widget>
           </item>
          </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="zeroGyroBiasOnArming">
+         <property name="toolTip">
+          <string>If enabled, a fast recalibration of gyro zero point will be done
+whenever the frame is armed. Do not move the airframe while
+arming it in that case!</string>
+         </property>
+         <property name="text">
+          <string>Zero gyros while arming vehicle</string>
+         </property>
+         <property name="objrelation" stdset="0">
+          <stringlist>
+           <string>objname:AttitudeSettings</string>
+           <string>fieldname:ZeroDuringArming</string>
+           <string>buttongroup:1</string>
+          </stringlist>
+         </property>
         </widget>
        </item>
       </layout>
