--- a/ground/gcs/src/plugins/gcscontrol/gcscontrol.ui
+++ b/ground/gcs/src/plugins/gcscontrol/gcscontrol.ui
@@ -26,16 +26,7 @@
    <property name="spacing">
     <number>2</number>
    </property>
-   <property name="leftMargin">
-    <number>5</number>
-   </property>
-   <property name="topMargin">
-    <number>5</number>
-   </property>
-   <property name="rightMargin">
-    <number>5</number>
-   </property>
-   <property name="bottomMargin">
+   <property name="margin">
     <number>5</number>
    </property>
    <item>
@@ -63,13 +54,10 @@
      <item>
       <widget class="QCheckBox" name="checkBoxArmed">
        <property name="enabled">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="text">
         <string>Armed</string>
-       </property>
-       <property name="checkable">
-        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -90,11 +78,11 @@
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0">
-     <property name="leftMargin">
-      <number>0</number>
-     </property>
      <property name="horizontalSpacing">
       <number>10</number>
+     </property>
+     <property name="leftMargin">
+      <number>0</number>
      </property>
      <item row="0" column="0">
       <widget class="JoystickControl" name="widgetLeftStick" native="true">
